# aoc

./: .gitignore  download.sh
2021/day16/: Cargo.toml
2021/day17/: Cargo.toml
2021/day5/: Cargo.toml
2022/: Cargo.toml
2022/day12/: Cargo.toml  index.html
2022/day12/src/: lib.rs  main.rs
2022/day17/: Cargo.toml  index.html
2022/day17/src/: lib.rs  main.rs
2022/day18/: Cargo.toml
2022/day18/src/: main.rs
2022/day19/: Cargo.toml  timings.txt
2022/day19/src/: lib.rs  main.rs  rts.rs
2022/day19/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
2022/day20/src/: main.rs
2022/day21/src/: main.rs
2022/day22/: Cargo.toml
2022/day22/src/: main.rs
2022/day23/: Cargo.toml
2022/day23/src/: main.rs
2022/day24/: Cargo.toml
2022/day24/src/: main.rs
2022/day25/: Cargo.toml
2022/day25/src/: main.rs  test_snafu.txt
2022/src/: aoc.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
2023/: .gitignore
2023/day17-astar/: Cargo.toml
2023/day18/: output.txt
2023/day20/: Cargo.toml
2023/day21/: Cargo.toml
2023/day23/: Cargo.toml
2023/day25/: Cargo.toml
2023/day25-icub3d/: Cargo.toml
2023/day25/src/: main.rs
2023/day4/: Cargo.toml
2023/day5/: Cargo.toml
2024/: download.sh
2024/day1/: Cargo.toml  download.sh  puzzle.md
2024/day10/: Cargo.toml  README.md  puzzle.md
2024/day11/: Cargo.toml  README.md  puzzle.md
aoc-utils/: Cargo.toml
aoc-utils/benches/: bench_algorithms.rs
aoc-utils/src/: dir.rs  graph.rs  grid.rs  grif.rs  grof.rs  grud.rs  lib.rs  lust.rs  pos2d.rs  pos3d.rs  run.rs  str.rs  uterators.rs  vec2d.rs  vec3d.rs  vecnd.rs
aoc-utils/src/grif/: algorithms.rs  iterators.rs  simple.rs  simple_vec.rs
aoc-utils/src/grof/: algorithms.rs  mod.rs  simple.rs
aoc-utils/src/grud/: grif.rs  grof.rs
template/: Cargo.toml  README.md  cargo-generate.toml
(+194 files in other folders)
