[package]
name = "day1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
itertools = { version = "0.10.5" }
lazy_static = { version = "1.4.0" }
regex = { version = "1.7.0" }
array2d = {}
num-traits = {}
pathfinding = {}
nom = {}