[package]
name = "aoc-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
approx = "0.5.1"
enum-iterator = "2.1.0"
graphviz-rust = "0.9.3"
num-traits = "0.2.19"
lazy-regex = "3.3.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench_algorithms"
harness = false