[package]
name = "day17"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
itertools = "0.10.5"
nom = "7"
pathfinding = "4.1.1"
svg = "0.13"
wasm-bindgen = "0.2.83"

[dev-dependencies]
pretty_assertions = "1.3.0"
